design: Fix stuttering jumping animation

--- a/front/components/modeSelect/modeSelect.module.css
+++ b/front/components/modeSelect/modeSelect.module.css
@@ -5,13 +5,13 @@
   /* justify-content: center; */
   /* align-items: center; */
 }
-
 .container2 {
   display: flex;
   flex-direction: row;
   gap: 10em;
+  z-index: 6;
+  margin-left: 6vw;
 }
-
 .btnBack {
   margin-top: 2em;
   width: fit-content;
@@ -20,25 +20,23 @@
 
 /* ------------------------------------------------------------------------------------ */
 /* 캐릭터 점프 애니매이션 */
+/* 싱글모드 */
 .stage {
   border-bottom: 3px solid #444;
   display: flex;
-  height: 330px;
-  width: 100%;
+  height: 300px;
+  width: 90%;
 }
-
 .box {
   align-self: flex-end;
   animation-duration: 2s;
   animation-iteration-count: infinite;
-  /* background-color: #F44336; */
-  height: 150px;
+  height: 125px;
   margin: 0 auto 0 auto;
   transform-origin: bottom;
-  width: 150px;
+  width: 125px;
 }
-
-.bounce7:hover {
+.btn:hover .bounce7 {
   animation-name: bounce7;
   animation-timing-function: cubic-bezier(0.280, 0.840, 0.420, 1);
 }
@@ -50,8 +48,69 @@
   57%  { transform: scale(1,1)      translateY(-7px); }
   64%  { transform: scale(1,1)      translateY(0); }
   100% { transform: scale(1,1)      translateY(0); }
-  
 }
+
+/* 멀티모드 */
+.stage1 {
+  border-bottom: 3px solid #444;
+  display: flex;
+  /* gap: 3em; */
+  height: 300px;
+  width: 90%;
+}
+
+.box1 {
+  align-self: flex-end;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  height: 150px;
+  margin: 0 auto 0 auto;
+  transform-origin: bottom;
+  width: 150px;
+}
+
+.btn1:hover .bounce1 {
+  animation-name: bounce1;
+  animation-timing-function: cubic-bezier(0.280, 0.840, 0.420, 1);
+}
+.btn1:hover .bounce2 {
+  animation-name: bounce2;
+  animation-timing-function: cubic-bezier(0.280, 0.840, 0.420, 1);
+  animation-duration: 2.5s;
+}
+.btn1:hover .bounce3 {
+  animation-name: bounce3;
+  animation-timing-function: cubic-bezier(0.280, 0.840, 0.420, 1);
+  animation-duration: 1.5s;
+}
+@keyframes bounce1 {
+  0%   { transform: scale(1,1)      translateY(0); }
+  10%  { transform: scale(1.1,.9)   translateY(0); }
+  30%  { transform: scale(.9,1.1)   translateY(-100px); }
+  50%  { transform: scale(1.05,.95) translateY(0); }
+  57%  { transform: scale(1,1)      translateY(-7px); }
+  64%  { transform: scale(1,1)      translateY(0); }
+  100% { transform: scale(1,1)      translateY(0); }
+}
+@keyframes bounce2 {
+  0%   { transform: scale(1,1)      translateY(0); }
+  10%  { transform: scale(1.1,.9)   translateY(0); }
+  30%  { transform: scale(.9,1.1)   translateY(-100px); }
+  50%  { transform: scale(1.05,.95) translateY(0); }
+  57%  { transform: scale(1,1)      translateY(-7px); }
+  64%  { transform: scale(1,1)      translateY(0); }
+  100% { transform: scale(1,1)      translateY(0); }
+}
+@keyframes bounce3 {
+  0%   { transform: scale(1,1)      translateY(0); }
+  10%  { transform: scale(1.1,.9)   translateY(0); }
+  30%  { transform: scale(.9,1.1)   translateY(-100px); }
+  50%  { transform: scale(1.05,.95) translateY(0); }
+  57%  { transform: scale(1,1)      translateY(-7px); }
+  64%  { transform: scale(1,1)      translateY(0); }
+  100% { transform: scale(1,1)      translateY(0); }
+}
+
 
 /* ------------------------------------------------------------------------------------------- */
 /* 텍스트 glowing 애니메이션 */
@@ -63,6 +122,11 @@
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
   cursor: pointer;
+}
+
+.container h2 {
+  font-size: 30px;
+  text-align: center;
 }
 
 @-webkit-keyframes glow {
